commit- changed the ports for the frontend and backend